fixed overflow of x-axis

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -33,6 +33,8 @@ html {
   color: var(--text-color);
   font-size: 1em;
   background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
 }
 
 .nav button,
@@ -45,15 +47,34 @@ html {
   justify-content: space-between;
   padding-left: 1em;
   padding-right: 1em;
+  padding-bottom: 0.5em;;
   position: sticky;
   width: 100%;
   top: 0;
-  height: 78px;
+  height:auto;
   align-items: center;
   -webkit-backdrop-filter: blur(13px);
   backdrop-filter: blur(13px);
   z-index: 999;
   background-color: var(--secondary-bg);
+}
+.cartOrders{
+  display: flex;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 881px) {
+  .nav div:nth-child(2){
+    order: 4;
+  }
+
+  .nav{
+    flex-wrap: wrap;
+    width:100%;
+  }
+  .menu div{
+    margin-left: 1rem;
+  }
 }
 
 .search-bar{
@@ -94,7 +115,7 @@ html {
 }
 
 .nav a {
-  font-size: 3.2rem;
+  font-size: 2rem;
   margin: 0;
   text-decoration: none;
   color: black;
@@ -105,29 +126,33 @@ html {
 }
 
 .menu {
+  position: relative;
   display: flex;
-  width: 58%;
-  margin-left: 30px;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
   z-index: 99;
   align-items: flex-end;
   height: 40%;
 }
+.menu div{
+  margin-left:0.5rem;
+  width:auto;
+  background-color: #54290c;
+  text-align: center;
+  padding:2px 7px 2px 7px;
+  border-radius: 3px;
+}
 
 .menu a {
   font-size: 1.07rem;
-  padding: 0;
+  padding: 2px;
   font-family: poppins, sans-serif;
   text-decoration: none;
   color: white;
-  padding-left: 15px;
   transition: 0.5s;
   font-weight: 700;
-  padding-right: 10px;
   z-index: -1;
-  background-color: #54290c;
-  border-radius: 3px;
-
 }
 
 .menu a:hover {
